CodeGenerator+Interop: Generate empty interface definitions for each parsed interface
This commit generates an empty interface definition for each of the parsed interfaces from the output of `TSDumper`. We also introduce our `Interop` project, which will be the nuget package that we end up shipping.

--- a/src/CodeGenerator/CodeGenerator.csproj
+++ b/src/CodeGenerator/CodeGenerator.csproj
@@ -7,5 +7,9 @@
         <Nullable>enable</Nullable>
         <RootNamespace>RealGoodApps.BlazorJavascript.CodeGenerator</RootNamespace>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="Newtonsoft.Json" Version="[13.0.1]" />
+    </ItemGroup>
 
 </Project>
