Repository: Reorganizing to allow for more homogeneous multi-IDE support
Since this repository has several package managers and requires multiple IDEs, it makes sense to adopt a structure that allows more flexibility in where the lines are drawn between `.idea` files, for example.

--- a/TSDumper/package.json
+++ b/TSDumper/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dump": "ts-node tsdumper.ts"
+    "dump": "ts-node src/tsdumper.ts"
   },
   "dependencies": {
     "typescript": "4.5.5",
