Interop: Removing support for netcoreapp3.1 for now
In order to support netcoreapp3.1, we'll need to have a separate mechanism for tracking objects that will be more expensive since we'll need to globally track all objects rather than using reference wrapping. Let's revisit this when we have more time.

--- a/Interop/src/Interop.csproj
+++ b/Interop/src/Interop.csproj
@@ -1,19 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
+        <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
         <RootNamespace>RealGoodApps.BlazorJavascript.Interop</RootNamespace>
         <Nullable>enable</Nullable>
     </PropertyGroup>
     
-    <ItemGroup Condition=" '$(TargetFramework)' == 'netcoreapp3.1' ">
-        <PackageReference Include="Microsoft.JSInterop" Version="3.1.*" />
-        <PackageReference Include="IsExternalInit" Version="[1.0.2]">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-        </PackageReference>
-    </ItemGroup>
-
     <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0' ">
         <PackageReference Include="Microsoft.JSInterop" Version="5.0.*" />
     </ItemGroup>
