Interop+CodeGenerator: Replace hardcoded prototype identification and construction
This commit adds code generation and support for identifying and constructing all prototypes that are detected. We still need to add user-bound constructors for these, but this will ensure that values and references that are returned from calls to Javascript space are returned in the appropriate C# type.

--- a/Interop/src/Interop.csproj
+++ b/Interop/src/Interop.csproj
@@ -19,6 +19,11 @@
       <EmbeddedResource Include="Javascript\script.js">
           <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </EmbeddedResource>
+
+        <None Remove="Generated\Javascript\script.js" />
+        <EmbeddedResource Include="Generated\Javascript\script.js">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </EmbeddedResource>
     </ItemGroup>
     
 </Project>
