--- a/CodeGenerator/src/CodeGenerator.csproj
+++ b/CodeGenerator/src/CodeGenerator.csproj
@@ -10,6 +10,7 @@
     
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="[13.0.1]" />
+        <PackageReference Include="ValueImmutableCollections" Version="[0.1.0]" />
     </ItemGroup>
 
 </Project>
