--- a/Interop/src/Interop.csproj
+++ b/Interop/src/Interop.csproj
@@ -20,5 +20,7 @@
             <CopyToOutputDirectory>Always</CopyToOutputDirectory>
         </EmbeddedResource>
     </ItemGroup>
-    
+
+    <Import Project="../../Common.props" />
+
 </Project>
