--- a/Interop/src/Interop.csproj
+++ b/Interop/src/Interop.csproj
@@ -3,9 +3,26 @@
     <PropertyGroup>
         <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
         <RootNamespace>RealGoodApps.BlazorJavascript.Interop</RootNamespace>
+        <AssemblyName>RealGoodApps.BlazorJavascript.Interop</AssemblyName>
         <Nullable>enable</Nullable>
+        <Version>$(BlazorJavascriptInteropVersion)</Version>
     </PropertyGroup>
-    
+
+    <PropertyGroup>
+        <PackageId>RealGoodApps.BlazorJavascript.Interop</PackageId>
+        <PackageVersion>$(BlazorJavascriptInteropVersion)</PackageVersion>
+        <Authors>RealGoodApps, LLC</Authors>
+        <PackageLicenseUrl>https://raw.githubusercontent.com/RealGoodAppsLLC/BlazorJavascript/main/LICENSE</PackageLicenseUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/RealGoodAppsLLC/BlazorJavascript</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/RealGoodAppsLLC/BlazorJavascript</RepositoryUrl>
+        <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+        <Description>Use web APIs via auto-generated JS interop classes in Blazor.</Description>
+        <PackageReleaseNotes>See the following: https://raw.githubusercontent.com/RealGoodAppsLLC/BlazorJavascript/main/CHANGELOG.md</PackageReleaseNotes>
+        <Copyright>Copyright 2022 RealGoodApps, LLC</Copyright>
+        <PackageTags>blazor javascript, javascript interop, web APIs, browser APIs, DOM APIs</PackageTags>
+    </PropertyGroup>
+
     <ItemGroup Condition=" '$(TargetFramework)' == 'net5.0' ">
         <PackageReference Include="Microsoft.JSInterop" Version="5.0.*" />
     </ItemGroup>
