TSVersionChecker+Workflows: Implement unit testing for TSVersionChecker
To make TSVersionChecker testable, I refactored the semantic versioning logic into its own class (SemanticVersion). I also added steps to the "Build & Test" and "Update Typescript" workflows to run the test suite.

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -24,6 +24,12 @@ jobs:
         with:
           dotnet-version: | 
             6.0.x
+      - name: Install TSVersionChecker Depdencies
+        working-directory: repo/TSVersionChecker
+        run: npm install
+      - name: Run TSVersionChecker Tests
+        working-directory: repo/TSVersionChecker
+        run: npm run test
       - name: Install TSDumper Dependencies
         working-directory: repo/TSDumper
         run: npm install
