--- a/TSVersionChecker/package.json
+++ b/TSVersionChecker/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "check": "ts-node src/tscheckversion.ts"
   },
   "dependencies": {
@@ -11,7 +11,11 @@
     "typescript": "4.5.5"
   },
   "devDependencies": {
-    "@types/node": "17.0.18"
+    "@types/chai": "4.3.0",
+    "@types/mocha": "9.1.0",
+    "@types/node": "17.0.18",
+    "chai": "4.3.6",
+    "mocha": "9.2.2"
   },
   "author": "RealGoodApps, LLC",
   "license": "MIT"
